# Appeals_service

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  makefile  pyproject.toml
.github/workflows/: main.yml
docker/: .env_db  .env_rmq  Dockerfile  docker-compose.yaml
src/: alembic.ini
src/admin_panel/: admin_views.py
src/clients/: S3.py  authorization.py  base.py
src/clients/broker/: abstract_broker.py  rabbitmq.py
src/clients/cache/: abstract_client.py  redis_client.py
src/clients/http/: authorization.py  base.py
src/common/: application.py  settings.py
src/db/: connector.py
src/db/tables/: __init__.py  appeals.py  base.py
src/dto/schemas/: appeals.py  users.py
src/migrations/versions/: 2025_02_02_1429-316db95bb656_.py  2025_02_05_1232-70e96d9181ed_.py
src/repositories/: appeal.py
src/routers/: base.py  healthcheck.py
src/routers/v1/: appeals.py  base_v1.py  sending_api.py  users.py
src/services/: appeal.py  user.py  user_service.py
src/utils/: auth.py  cache.py  enums.py  logging.py  role_checker.py
tests/: conftest.py  test_appeals.py  test_users.py
tests/utils/: tokens.py
