[tool.poetry]
name = "appeals-service"
version = "0.1.0"
description = ""
authors = ["Евгений <evgeniy.moiseev.progr@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.7"
pydantic = {version = "^2.10.6", extras = ["email"]}
pydantic-settings = "^2.7.1"
pika = "^1.3.2"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
aiohttp = "^3.11.11"
pyjwt = "^2.10.1"
user-agents = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
